// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profile /> Snapshot tests should be hidden by default 1`] = `<div />`;

exports[`<Profile /> Snapshot tests should display if profile properties are all empty 1`] = `
<div>
  <div
    className="profile modal"
    onClick={[Function]}
  >
    <div
      className="container"
    >
      <div
        className="modal-content"
        onClick={[Function]}
      >
        <div
          className="modal-header"
        >
          <h4
            className="modal-title"
          >
            My Profile
          </h4>
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          className="modal-body"
        >
          <div>
            <div
              className="name"
            >
              <h5>
                Display Name
              </h5>
              <input
                className="form-control"
                defaultValue={null}
                type="text"
              />
            </div>
            <hr />
            <div
              className="birthday"
            >
              <h5>
                Birthday
              </h5>
              <input
                className="form-control"
                defaultValue="1970-01-01"
                type="date"
              />
            </div>
            <hr />
            <div
              className="bio"
            >
              <h5>
                User Bio
              </h5>
              <textarea
                className="form-control"
                defaultValue={null}
              />
            </div>
            <hr />
            <div
              className="filters"
            >
              <h5>
                User Filters
              </h5>
              <div
                className="gender"
              >
                <h7>
                  Gender Filter
                </h7>
                <div
                  className="filter element disabled"
                >
                  <div
                    className="toggle"
                  >
                    <label
                      className="switch"
                    >
                      <input
                        checked={undefined}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <div
                        className="slider round"
                      />
                    </label>
                  </div>
                  <div
                    className="content"
                  >
                    <div>
                      <div
                        className="Select is-clearable is-loading is-searchable Select--multi"
                        style={undefined}
                      >
                        <div
                          className="Select-control"
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          style={undefined}
                        >
                          <span
                            className="Select-multi-value-wrapper"
                            id="react-select-2--value"
                          >
                            <div
                              className="Select-placeholder"
                            >
                              Loading...
                            </div>
                            <div
                              className="Select-input"
                              style={
                                Object {
                                  "display": "inline-block",
                                }
                              }
                            >
                              <input
                                aria-activedescendant="react-select-2--value"
                                aria-describedby={undefined}
                                aria-expanded="false"
                                aria-haspopup="false"
                                aria-label={undefined}
                                aria-labelledby={undefined}
                                aria-owns=""
                                className={undefined}
                                id={undefined}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                required={false}
                                role="combobox"
                                style={
                                  Object {
                                    "boxSizing": "content-box",
                                    "width": "5px",
                                  }
                                }
                                tabIndex={undefined}
                                value=""
                              />
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                
                              </div>
                            </div>
                          </span>
                          <span
                            aria-hidden="true"
                            className="Select-loading-zone"
                          >
                            <span
                              className="Select-loading"
                            />
                          </span>
                          <span
                            className="Select-arrow-zone"
                            onMouseDown={[Function]}
                          >
                            <span
                              className="Select-arrow"
                              onMouseDown={[Function]}
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <button
            className="btn btn-outline-secondary"
            onClick={[Function]}
            type="button"
          >
            Discard Changes
          </button>
          <button
            className="btn btn-primary"
            onClick={[Function]}
            type="button"
          >
            Save Changes
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Profile /> Snapshot tests should display profile properties when provided 1`] = `
<div>
  <div
    className="profile modal"
    onClick={[Function]}
  >
    <div
      className="container"
    >
      <div
        className="modal-content"
        onClick={[Function]}
      >
        <div
          className="modal-header"
        >
          <h4
            className="modal-title"
          >
            My Profile
          </h4>
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          className="modal-body"
        >
          <div>
            <div
              className="name"
            >
              <h5>
                Display Name
              </h5>
              <input
                className="form-control"
                defaultValue="Test User"
                type="text"
              />
            </div>
            <hr />
            <div
              className="birthday"
            >
              <h5>
                Birthday
              </h5>
              <input
                className="form-control"
                defaultValue="1991-10-18"
                type="date"
              />
            </div>
            <hr />
            <div
              className="bio"
            >
              <h5>
                User Bio
              </h5>
              <textarea
                className="form-control"
                defaultValue="This is a test bio for a test user"
              />
            </div>
            <hr />
            <div
              className="filters"
            >
              <h5>
                User Filters
              </h5>
              <div
                className="gender"
              >
                <h7>
                  Gender Filter
                </h7>
                <div
                  className="filter element disabled"
                >
                  <div
                    className="toggle"
                  >
                    <label
                      className="switch"
                    >
                      <input
                        checked={undefined}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <div
                        className="slider round"
                      />
                    </label>
                  </div>
                  <div
                    className="content"
                  >
                    <div>
                      <div
                        className="Select is-clearable is-loading is-searchable Select--multi"
                        style={undefined}
                      >
                        <div
                          className="Select-control"
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          style={undefined}
                        >
                          <span
                            className="Select-multi-value-wrapper"
                            id="react-select-3--value"
                          >
                            <div
                              className="Select-placeholder"
                            >
                              Loading...
                            </div>
                            <div
                              className="Select-input"
                              style={
                                Object {
                                  "display": "inline-block",
                                }
                              }
                            >
                              <input
                                aria-activedescendant="react-select-3--value"
                                aria-describedby={undefined}
                                aria-expanded="false"
                                aria-haspopup="false"
                                aria-label={undefined}
                                aria-labelledby={undefined}
                                aria-owns=""
                                className={undefined}
                                id={undefined}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                required={false}
                                role="combobox"
                                style={
                                  Object {
                                    "boxSizing": "content-box",
                                    "width": "5px",
                                  }
                                }
                                tabIndex={undefined}
                                value=""
                              />
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                
                              </div>
                            </div>
                          </span>
                          <span
                            aria-hidden="true"
                            className="Select-loading-zone"
                          >
                            <span
                              className="Select-loading"
                            />
                          </span>
                          <span
                            className="Select-arrow-zone"
                            onMouseDown={[Function]}
                          >
                            <span
                              className="Select-arrow"
                              onMouseDown={[Function]}
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <button
            className="btn btn-outline-secondary"
            onClick={[Function]}
            type="button"
          >
            Discard Changes
          </button>
          <button
            className="btn btn-primary"
            onClick={[Function]}
            type="button"
          >
            Save Changes
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Profile /> Snapshot tests should display profile properties when provided 1`] = `
<div>
  <div
    className="profile modal"
    onClick={[Function]}
  >
    <div
      className="container"
    >
      <div
        className="modal-content"
        onClick={[Function]}
      >
        <div
          className="modal-header"
        >
          <h4
            className="modal-title"
          >
            My Profile
          </h4>
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          className="modal-body"
        >
          <div>
            <div
              className="name"
            >
              <h5>
                Display Name
              </h5>
              <input
                className="form-control"
                defaultValue="Test User"
                type="text"
              />
            </div>
            <hr />
            <div
              className="birthday"
            >
              <h5>
                Birthday
              </h5>
              <input
                className="form-control"
                defaultValue="1991-10-18"
                type="date"
              />
            </div>
            <hr />
            <div
              className="bio"
            >
              <h5>
                User Bio
              </h5>
              <textarea
                className="form-control"
                defaultValue="This is a test bio for a test user"
              />
            </div>
            <hr />
            <div
              className="filters"
            >
              <h5>
                User Filters
              </h5>
              <div
                className="gender"
              >
                <h7>
                  Gender Filter
                </h7>
                <div
                  className="filter element disabled"
                >
                  <div
                    className="toggle"
                  >
                    <label
                      className="switch"
                    >
                      <input
                        checked={undefined}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <div
                        className="slider round"
                      />
                    </label>
                  </div>
                  <div
                    className="content"
                  >
                    <div>
                      <div
                        className="Select is-clearable is-loading is-searchable Select--multi"
                        style={undefined}
                      >
                        <div
                          className="Select-control"
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          style={undefined}
                        >
                          <span
                            className="Select-multi-value-wrapper"
                            id="react-select-3--value"
                          >
                            <div
                              className="Select-placeholder"
                            >
                              Loading...
                            </div>
                            <div
                              className="Select-input"
                              style={
                                Object {
                                  "display": "inline-block",
                                }
                              }
                            >
                              <input
                                aria-activedescendant="react-select-3--value"
                                aria-describedby={undefined}
                                aria-expanded="false"
                                aria-haspopup="false"
                                aria-label={undefined}
                                aria-labelledby={undefined}
                                aria-owns=""
                                className={undefined}
                                id={undefined}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                required={false}
                                role="combobox"
                                style={
                                  Object {
                                    "boxSizing": "content-box",
                                    "width": "5px",
                                  }
                                }
                                tabIndex={undefined}
                                value=""
                              />
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                
                              </div>
                            </div>
                          </span>
                          <span
                            aria-hidden="true"
                            className="Select-loading-zone"
                          >
                            <span
                              className="Select-loading"
                            />
                          </span>
                          <span
                            className="Select-arrow-zone"
                            onMouseDown={[Function]}
                          >
                            <span
                              className="Select-arrow"
                              onMouseDown={[Function]}
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <button
            className="btn btn-outline-secondary"
            onClick={[Function]}
            type="button"
          >
            Discard Changes
          </button>
          <button
            className="btn btn-primary"
            onClick={[Function]}
            type="button"
          >
            Save Changes
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
